tests/eu.numberfour.n4js.transpiler.es5.tests/testdata/errors/HelloWorldError.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.transpiler.es5.xpect.tests.CompileAndExecuteTest END_SETUP */

/* Fails on some machines, as throw seems to get evaluated first XPECT ! output --- 
<==
stdout:
hello world
stderr:

[eval]:32
throw 'world error'
^
world error
==>
--- */
console.log('hello world');
throw 'world error';
